test/measureReversePhase2.slq
// args: --run

def main(){
	def f(const x:ğ”¹){
		measure(x);
		return ();
	}
	x:=H(0:ğ”¹);
	k:=reverse(phase);
	reverse(phase)(Ï€/2,()):=f(x); /// error
	reverse(phase)(Ï€/2,(),()):=f(x); /// error
	phase(-Ï€/2);
	return x;
}
